# forest-opt

./: README.md  main.py  pyproject.toml  visual.py
data/forest_data/: BIL.csv  CAP.csv  CARBON.csv  CHSI.csv  COWBERRY.csv  HG.csv  H_log.csv  H_log_0_.csv  H_log_10_.csv  H_log_11_.csv  H_log_12_.csv  H_log_13_.csv  H_log_14_.csv  H_log_15_.csv  H_log_16_.csv  H_log_17_.csv  H_log_18_.csv  H_log_19_.csv  H_log_1_.csv  H_log_2_.csv  H_log_3_.csv  H_log_4_.csv  H_log_5_.csv  H_log_6_.csv  H_log_7_.csv  H_log_8_.csv  H_log_9_.csv  H_pulp.csv  H_pulp_0_.csv  H_pulp_10_.csv  H_pulp_11_.csv  H_pulp_12_.csv  H_pulp_13_.csv  H_pulp_14_.csv  H_pulp_15_.csv  H_pulp_16_.csv  H_pulp_17_.csv  H_pulp_18_.csv  H_pulp_19_.csv  H_pulp_1_.csv  (+79 more)
forest/: asf.py  optimization.py  process_data.py  utils.py
