[tool.poetry]
name = "forest-opt"
version = "0.1.0"
description = "Utilities to optimize and generate Pareto optimal fronts from forest data."
authors = ["Giovanni Misitano <giovanni.a.misitano@jyu.fi>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
scipy = "^1.3"
pandas = "^0.25.2"
pyomo = "^5.6"
jedi = "^0.15.1"
matplotlib = "^3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
jedi = "^0.15.1"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
